social+footer+customers

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@
   --ourteam-bgc-color: rgba(245, 244, 250, 1);
   --footer-color: rgba(47, 48, 58, 1);
   --active-color: rgba(33, 150, 243, 1);
+  --icon-color: rgba(175, 177, 184, 1);
+ 
+
+  --primary-margin: 30px;
+  --grid-item: 3;
+
 }
 body {
   color: var(--primary-text-color);
@@ -117,11 +123,13 @@ img {
   letter-spacing: 0.02em;
   color: #757575;
 }
+
 /*hero*/
 
 .herotext {
   color: var(--white-color);
   background-color: #2f303a;
+  background-image: url('../images/backgroundhero.jpg');
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -196,6 +204,18 @@ margin-left: 30px;
   padding-top: 94px;
   padding-bottom: 50px;
 }
+ .radarsvg {
+ padding-top: 25px;
+ padding-left: 102.34px;
+ padding-bottom: 25px;
+ padding-right: 102.34px;
+ background-color: #F5F4FA;
+ Corner radius: 4px;
+ X: 2.34px
+ Y: 0px
+width: 65.32px
+height: 70px
+  }
 .engagement {
   display: flex;
   justify-content: center;
@@ -270,11 +290,125 @@ margin-bottom: 94px;
 margin-left: 0;
 }
 
+/*customers*/
+.customers .lists {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: calc(-1 * var(--primary-margin));
+  padding-bottom: 94px;
+  padding-top: 50px;
+}
 
+ .customers .title {
+  color: var(--titles-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 19px;
+  
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  padding-top: 94px;
+  
+}
+
+
+.item-customers .link {
+  display: flex;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+  height: 90px;
+  justify-content: center;
+  align-items: center;
+}
+.item-customers {
+  flex-basis: calc((100% - 30px * var(--grid-item)) / var(--grid-item));
+  --grid-item: 6;
+ 
+}
+.icon-clients {
+  fill: var(--icon-color);
+}
+.item-customers .link:hover,
+.item-customers .link:focus {
+  border: 1px solid var(--active-color);
+}
+.item-customers .link:hover .icon-clients,
+.item-customers .link:focus .icon-clients {
+  fill: var(--active-color);
+}
+.item-customers:not(:first-child) {
+  margin-left: var(--primary-margin);
+}
+
+ /*social*/
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+  background-color: #fff;
+}
+
+.social-icons-item .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+.social-icons-item + .social-icons-item {
+  margin-left: 10px;
+}
+
+.social-icons-link {
+  width: 20px;
+  height: 20px;
+  fill: var(--icon-color);
+}
+.social-icons-item .link:hover,
+.social-icons-item .link:focus,
+.social-icons-item .link:hover .social-icons-link ,
+.social-icons-item .link:focus .social-icons-link {
+  background-color: var(--active-color);
+  fill: var(--white-color);
+}
+
+  
+
+/*footer*/
 .footer {
+  display: flex;
   background-color: var(--footer-color);
   height: 252px;
+  padding-top: 0;
 }
+.footer-data {
+  margin-right: 70px;
+}
+.come-us {
+  display: block;
+}
+.come-us-text {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+  margin-top: 12px;
+  padding-top: 72px;
+}
+.come-us .link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+
 .footer-logo {
  padding-top: 60px; 
 }
@@ -294,6 +428,12 @@ margin-left: 0;
   font-size: 14px;
   line-height: 1.71;
 }
+.footer-social {
+  display: flex;
+  flex-direction: row;
+}
+
+
 /*portfolio*/
 
 .portfolio-button {
