--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,8 @@ body {
   background-color: var(--white-color);
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
-  width: 1600px;
+  margin: 0;
+  
 }
 h1,
 h2,
@@ -31,8 +32,14 @@ p {
 
 img {
   display: block;
-  max-width: 100%;
-  
+  max-width: 100%; 
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .lists {
   list-style: none;
@@ -48,9 +55,7 @@ img {
   color: var(--active-color);
 }
 /* header*/
-.container {
-  width: 1600px;
-}
+
 .header .container {
   height: 80px;
   background: #ffffff;
@@ -62,19 +67,17 @@ img {
   font-size: 26px;
   letter-spacing: 0.03em;
   color: #2196f3;
-  margin-left: 215px;
+  
 }
 .logo2 {
   color: var(--titles-text-color);
   position: absolute;
 }
-.header .logo {
-  margin-right: 215px;
-}
 .nav {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+ 
 }
 .navlink {
   color: var(--titles-text-color);
@@ -86,14 +89,31 @@ img {
 }
 .contacts {
   display: flex;
-  justify-content: flex-end;
-  margin-right: 215px;
-  margin-left: auto;
+ justify-content:space-evenly;
 }
+.contacts:not(:first-child) {
+  margin-left: 50px;
+}
+
+.contact {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color) ;
+}
+.contact:hover,
+.contact:focus {
+  color: var(--active-color);
+}
+.icon-contacts {
+  margin-right: 10px;
+  fill: currentColor;
+  align-items: center;
+}
+
 .nav-list {
   display: flex;
-  align-items: center;
-  margin-left: 93px;
 }
 .nav-list .item {
   margin-right: 40px;
@@ -108,106 +128,77 @@ img {
 .active {
   color: var(--active-color);
 }
-.mail {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #2196f3;
-  margin-right: 50px;
-}
-.mail-icon {
-  width: 16px;height: 12px;
-  align-items: baseline;
-}
-.tel-icon
-{
-  width: 16px;height: 12px;
-  align-items: baseline;
-}
 
 
-.tel {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-}
 
 /*hero*/
-
-.herotext {
+.hero {
+  text-align: center;
+  max-width: 1600px;
+  height: 600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--bgc-hero);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/backgroundhero.jpg);
+    background-size: cover;
+}
+.hero-text {
   color: var(--white-color);
-  background-color: #2f303a;
-  background-image: url('../images/backgroundhero.jpg');
+  max-width: 695px;
+  height: 120px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: var(--primary-margin);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
-  box-sizing: border-box;
-  padding: 200px 450px 200px 450px;
-  pad
 }
-.button {
+.button-hero {
   color: var(--white-color);
-  background-color: #2196f3;
+  background-color: var(--active-color);
   cursor: pointer;
+  padding: 10px 32px;
+  min-width: 200px;
+  border-radius: 4px;
+  border: transparent;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
+  display: inline-block;
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
-  border-radius: 4px;
-
-  margin-top: -230px;
-  text-align: center;
-}
-.button-sec {
-  padding-bottom: 200px;
-  padding-left: 700px;
- align-items: center;
 }
 
 /*specs*/
 .specs-section {
   padding-top: 94px;
+  padding-bottom: 94px;
 }
 .specs-section .lists{
   display: flex;
   justify-content: center;
 }
-.specs-section-item::before {
-  display: block;
-  margin-bottom: 30px;
-  padding: 25px 100px;
+.specs-pic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   content: ('');
   height: 120px;
+  width: 270px;
   background-color: var(--ourteam-bgc-color);
-  background-repeat: no-repeat;
-  background-position: center;
+ 
 }
-
-.specs-section-item:nth-child(1)::before {
-  background-image: url(../images/icons/symbol-defs.svg#icon-radar);
-}
-.specs-section-item:nth-child(2)::before {
-  background-image: url(../images/icons/symbol-defs.svg#icon-sat);
-}  
-.specs-section-item:nth-child(3)::before {
-  background-image: url(../images/icons/symbol-defs.svg#icon-komp);
-}    
-.specs-section-item:nth-child(4)::before {
-  background-image: url(../images/icons/symbol-defs.svg#icon-spaceman);
-}  
-
-
 
 .specs-section-item {
 align-self: center;
@@ -227,14 +218,14 @@ margin-left: 30px;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  padding-top: 30px;
 }
 .specs-section-text {
   font-size: 14px;
   line-height: 1.71;
 }
 
-
-
+/*engagement*/
 
 .engagement-title {
   color: var(--titles-text-color);
@@ -242,39 +233,39 @@ margin-left: 30px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  padding-top: 94px;
-  padding-bottom: 50px;
+  margin-bottom: 0;
 }
  
 .engagement {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .engagement .engagement-pic {
   align-self: center;
-margin-left: 30px; 
-padding-bottom: 94px;
 }
 
 .engagement .engagement-pic:first-child {
   margin-left: 0;
-
 } 
+
+/*team*/
 .team {
   background: #F5F4FA;
+  padding-top: 94px;
+  margin: 0;
 }
+
 .team .title {
-  font-size: 36px;
+font-size: 36px;
 line-height: 42px;
+margin-bottom: 0;
+
 text-align: center;
 letter-spacing: 0.03em;
-
-padding-top: 94px;
-padding-bottom: 50px;
-
 color: #212121;
 }
-
 
 .team-title {
 color: var(--titles-text-color);
@@ -282,17 +273,13 @@ color: var(--titles-text-color);
 font-weight: 500;
 font-size: 16px;
 line-height: 19px;
+padding-top: 30px;padding-bottom: 10px;
 
 text-align: center;
 letter-spacing: 0.03em;
-padding-top: 30px;
-padding-bottom: 10px;
 margin-bottom: 0;
 
-
-
 background-color: #ffffff;
-
 }
 
 .team-text {
@@ -326,7 +313,7 @@ margin-left: 0;
   flex-wrap: wrap;
   margin-right: calc(-1 * var(--primary-margin));
   padding-bottom: 94px;
-  padding-top: 50px;
+  padding-top: 94px;
 }
 
  .customers .title {
@@ -340,6 +327,7 @@ margin-left: 0;
   letter-spacing: 0.03em;
 
   padding-top: 94px;
+  margin-bottom: 0;
   
 }
 
@@ -408,17 +396,13 @@ margin-left: 0;
   fill: var(--white-color);
 }
 
-  
-
 /*footer*/
 .footer {
   display: flex;
   background-color: var(--footer-color);
-  height: 252px;
-  padding-top: 0;
-}
-.footer-data {
-  margin-right: 70px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  width: auto;
 }
 .come-us {
   display: block;
@@ -433,20 +417,16 @@ margin-left: 0;
   color: var(--white-color);
   margin-bottom: 20px;
   margin-top: 12px;
-  padding-top: 72px;
 }
 .come-us .link {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.footer-data {
+ margin-right: 70px;
+ padding-left: 70px;
+}
 
-.footer-logo {
- padding-top: 60px; 
-}
-.footer-contacts {
-  margin-left: 215px;
-  margin-top: 20px;
-}
 .address {
   color: var(--white-color);
   font-style: normal;
@@ -463,7 +443,6 @@ margin-left: 0;
   display: flex;
   flex-direction: row;
 }
-
 
 /*portfolio*/
 
@@ -489,11 +468,12 @@ border: azure;
   color: var(--white-color);
   background-color: var(--active-color);
   cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .filter-button  {
   margin-top: 94px;
   margin-bottom: 50px;
-
   display: flex;
   justify-content: center;
 }
@@ -501,8 +481,6 @@ border: azure;
   display: flex;
   justify-content: center;
 }
-
-
 .grid {
   width: 1230px;
   padding-left: 15px;
@@ -510,23 +488,23 @@ border: azure;
   margin-left: auto;
   margin-right: auto;
 }
-
 .grid .lists {
   display: flex;
   flex-wrap: wrap;
 }
-
 .grid .item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid rgba(238, 238, 238, 1);
 }
-
 .grid .item :nth-child(n3) {
 margin-right: 0;
 } 
-
 .grid .item :last-child(-n+3) {
   margin-bottom: 0;
 } 
+.grid .item:hover
+.grid .item:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
